# src/main/java/org/app/domain/service/AccountService.java
@@ -1,0 +1,8 @@
+package org.app.domain.service;
+
+import org.openapitools.model.AccountRequest;
+import org.openapitools.model.AccountResponse;
+
+public interface AccountService {
+  AccountResponse createAccount(AccountRequest accountRequest);
+}
