# src/main/resources/openapi/finanz-openapi.yaml
@@ -46,6 +46,23 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SignInResponse'
+  /account:
+    post:
+      summary: Create account
+      operationId: createAccount
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AccountRequest'
+      responses:
+        '201':
+          description: Account created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccountResponse'
 
 components:
   schemas:
@@ -105,6 +122,45 @@ components:
         refreshToken:
           type: string
           example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJ0ZXN0QGV4YW1wbGUuY29tIiwiaWF0IjoxNjg4ODg4ODg4LCJleHAiOjE2ODg4OTI0ODh9.abc123def456ghi789jkl012mno345pqr678stu901vwx234yz567890'
+    AccountBase:
+      type: object
+      properties:
+        accountName:
+          type: string
+          example: 'My Savings Account'
+        color:
+          type: string
+          example: '#FF5733'
+        type:
+          type: string
+          example: 'Savings'
+        amount:
+          type: number
+          format: double
+          example: 1000.50
+        currency:
+          type: string
+          example: 'USD'
+        excludeFromStatistics:
+          type: boolean
+          example: false
+      required:
+        - accountName
+        - accountType
+        - currency
+    AccountRequest:
+      allOf:
+        - $ref: '#/components/schemas/AccountBase'
+        - type: object
+    AccountResponse:
+      allOf:
+        - $ref: '#/components/schemas/AccountBase'
+        - type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+              example: 1
     ErrorResponse:
       type: object
       properties:
